@@ -1,3 +1,8 @@
+2008-03-14  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/dsCMatrix.R: setAs(., "dsCMatrix") but with a deprecation
+	warning.
+
 2008-03-13  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* DESCRIPTION (Version, Date): bug-fix release 0.999375-6
